--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "passport-local": "^1.0.0"
   }
 }
